clusters/labinfra/apps/trigger.xuperson.org/trigger-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trigger
  labels:
    name: trigger
