clusters/labinfra/apps/trigger.xuperson.org/trigger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trigger
  namespace: trigger
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "trigger.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: "trigger"
    nginx.ingress.kubernetes.io/proxy-set-headers: "ingress-nginx/proxy-headers"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
  - host: trigger.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trigger
            port:
              number: 3000
