clusters/labinfra/apps/trigger.xuperson.org/trigger-manifests.yaml
---
# Source: trigger/charts/clickhouse/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: trigger-clickhouse
  namespace: "trigger"
  labels:
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/version: 25.6.1
    helm.sh/chart: clickhouse-9.3.7
    app.kubernetes.io/part-of: clickhouse
    app.kubernetes.io/component: clickhouse
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: trigger
      app.kubernetes.io/name: clickhouse
      app.kubernetes.io/part-of: clickhouse
      app.kubernetes.io/component: clickhouse
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8123
        - port: 9000
        - port: 9004
        - port: 9005
        - port: 9009
---
# Source: trigger/charts/clickhouse/templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trigger-clickhouse-headless
  namespace: "trigger"
  labels:
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/version: 25.6.1
    helm.sh/chart: clickhouse-9.3.7
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/part-of: clickhouse
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: http
      targetPort: http
      port: 8123
      protocol: TCP
    - name: tcp
      targetPort: tcp
      port: 9000
      protocol: TCP
    - name: tcp-mysql
      targetPort: tcp-mysql
      port: 9004
      protocol: TCP
    - name: tcp-postgresql
      targetPort: tcp-postgresql
      port: 9005
      protocol: TCP
    - name: http-intersrv
      targetPort: http-intersrv
      port: 9009
      protocol: TCP
  selector:
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/part-of: clickhouse
---
# Source: trigger/charts/clickhouse/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trigger-clickhouse
  namespace: "trigger"
  labels:
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/version: 25.6.1
    helm.sh/chart: clickhouse-9.3.7
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/part-of: clickhouse
  annotations:
    {}
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      targetPort: http
      port: 8123
      protocol: TCP
      nodePort: null
    - name: tcp
      targetPort: tcp
      port: 9000
      protocol: TCP
      nodePort: null
    - name: tcp-mysql
      targetPort: tcp-mysql
      port: 9004
      protocol: TCP
      nodePort: null
    - name: tcp-postgresql
      targetPort: tcp-postgresql
      port: 9005
      protocol: TCP
      nodePort: null
    - name: http-intersrv
      targetPort: http-intersrv
      port: 9009
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/part-of: clickhouse
---
# Source: trigger/templates/electric.yaml
apiVersion: v1
kind: Service
metadata:
  name: trigger-electric
  labels:
    helm.sh/chart: trigger-4.0.0
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/version: "v4.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: electric
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/component: electric
---
# Source: trigger/templates/supervisor.yaml
apiVersion: v1
kind: Service
metadata:
  name: trigger-supervisor
  labels:
    helm.sh/chart: trigger-4.0.0
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/version: "v4.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: supervisor
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: workload
      protocol: TCP
      name: workload
    - port: 9088
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/component: supervisor
---
# Source: trigger/templates/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: trigger-webapp
  labels:
    helm.sh/chart: trigger-4.0.0
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/version: "v4.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webapp
spec:
  type: ClusterIP
  ports:
    - port: 3030
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/component: webapp
---
# Source: trigger/templates/electric.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trigger-electric
  labels:
    helm.sh/chart: trigger-4.0.0
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/version: "v4.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: electric
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trigger
      app.kubernetes.io/instance: trigger
      app.kubernetes.io/component: electric
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trigger
        app.kubernetes.io/instance: trigger
        app.kubernetes.io/component: electric
    spec:
      containers:
        - name: electric
          image: "docker.io/electricsql/electric:1.0.24"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            successThreshold: 1
          resources:
            {}
---
# Source: trigger/templates/supervisor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trigger-supervisor
  labels:
    helm.sh/chart: trigger-4.0.0
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/version: "v4.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: supervisor
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trigger
      app.kubernetes.io/instance: trigger
      app.kubernetes.io/component: supervisor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trigger
        app.kubernetes.io/instance: trigger
        app.kubernetes.io/component: supervisor
    spec:
      serviceAccountName: trigger-supervisor
      securityContext:
        fsGroup: 1000
      containers:
        - name: supervisor
          image: ghcr.io/triggerdotdev/supervisor:v4.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: workload
              containerPort: 3000
              protocol: TCP
            - name: metrics
              containerPort: 9088
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: workload
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: workload
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          resources:
            {}
---
# Source: trigger/templates/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trigger-webapp
  labels:
    helm.sh/chart: trigger-4.0.0
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/version: "v4.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trigger
      app.kubernetes.io/instance: trigger
      app.kubernetes.io/component: webapp
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: webapp
      labels:
        app.kubernetes.io/name: trigger
        app.kubernetes.io/instance: trigger
        app.kubernetes.io/component: webapp
    spec:
      serviceAccountName: trigger-webapp
      securityContext:
        fsGroup: 1000
      containers:
        - name: token-syncer
          image: bitnami/kubectl:1.28
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
          command:
            - /bin/bash
            - -c
            - |
              [...]
          volumeMounts:
            - name: shared
              mountPath: /home/node/shared
        - name: webapp
          securityContext:
            null
          image: ghcr.io/triggerdotdev/trigger.dev:v4.0.0
          imagePullPolicy: IfNotPresent
          command: 
            - ./scripts/entrypoint.sh
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
            successThreshold: 1
          resources:
            {}
          volumeMounts:
            - name: shared
              mountPath: /home/node/shared
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: trigger-shared
---
# Source: trigger/charts/clickhouse/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: trigger-clickhouse-shard0
  namespace: "trigger"
  labels:
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/version: 25.6.1
    helm.sh/chart: clickhouse-9.3.7
    app.kubernetes.io/component: clickhouse
    app.kubernetes.io/part-of: clickhouse
    shard: "0"
spec:
  replicas: 1
  podManagementPolicy: "Parallel"
  selector:
    matchLabels:
      app.kubernetes.io/instance: trigger
      app.kubernetes.io/name: clickhouse
      app.kubernetes.io/component: clickhouse
      app.kubernetes.io/part-of: clickhouse
      shard: "0"
  serviceName: trigger-clickhouse-headless
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configd-configuration: 51c61dc766833a24598911606ad88f5aa4dbdc2263d6adb7d8ab47dbf67e4954
      labels:
        app.kubernetes.io/instance: trigger
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: clickhouse
        app.kubernetes.io/version: 25.6.1
        helm.sh/chart: clickhouse-9.3.7
        app.kubernetes.io/component: clickhouse
        app.kubernetes.io/part-of: clickhouse
        shard: "0"
    spec:
      
      automountServiceAccountToken: false
      serviceAccountName: trigger-clickhouse
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: trigger
                    app.kubernetes.io/name: clickhouse
                    app.kubernetes.io/component: clickhouse
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: clickhouse
          image: docker.io/bitnami/clickhouse:25.6.1-debian-12-r0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          ports:
            - name: http
              containerPort: 8123
            - name: tcp
              containerPort: 9000
            - name: tcp-postgresql
              containerPort: 9005
            - name: tcp-mysql
              containerPort: 9004
            - name: http-intersrv
              containerPort: 9009
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /ping
              port: http
          volumeMounts:
            - name: data
              mountPath: /bitnami/clickhouse
            - name: configd-configuration
              mountPath: /bitnami/clickhouse/etc/config.d
            - name: secrets
              mountPath: /opt/bitnami/clickhouse/secrets
              readOnly: true
            - name: empty-dir
              mountPath: /opt/bitnami/clickhouse/etc
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/clickhouse/logs
              subPath: app-logs-dir
            - name: empty-dir
              mountPath: /opt/bitnami/clickhouse/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: configd-configuration
          configMap:
            name: trigger-clickhouse-configd
        - name: secrets
          secret:
            secretName: trigger-clickhouse
            defaultMode: 256
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
        labels:
          app.kubernetes.io/instance: trigger
          app.kubernetes.io/name: clickhouse
          app.kubernetes.io/component: clickhouse
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "10Gi"
---
# Source: trigger/templates/tests/test-clickhouse.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "trigger-test-clickhouse"
  labels:
    helm.sh/chart: trigger-4.0.0
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/version: "v4.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  restartPolicy: Never
  containers:
    - name: test-clickhouse
      image: curlimages/curl:8.14.1
      command: ['sh', '-c']
      args:
        - |
          echo "Testing ClickHouse HTTP interface..."
          curl -f --user ":" "http://trigger-clickhouse:8123/ping"
          echo "ClickHouse test completed successfully"
---
# Source: trigger/templates/tests/test-electric.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "trigger-test-electric"
  labels:
    helm.sh/chart: trigger-4.0.0
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/version: "v4.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  restartPolicy: Never
  containers:
    - name: test-electric
      image: curlimages/curl:8.14.1
      command: ['sh', '-c']
      args:
        - |
          echo "Testing Electric health endpoint..."
          curl -f http://trigger-electric:3000/api/status
          echo "Electric test completed successfully"
---
# Source: trigger/templates/tests/test-webapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "trigger-test-webapp"
  labels:
    helm.sh/chart: trigger-4.0.0
    app.kubernetes.io/name: trigger
    app.kubernetes.io/instance: trigger
    app.kubernetes.io/version: "v4.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  restartPolicy: Never
  containers:
    - name: test-webapp
      image: curlimages/curl:8.14.1
      command: ['sh', '-c']
      args:
        - |
          echo "Testing webapp health endpoint..."
          curl -f http://trigger-webapp:3030/healthcheck
          echo "Webapp test completed successfully"
